don't overwrite previously defined project name in *.kdev4 file

REVIEW: 104641
BUG: 298263